API swagger article (show all comments for article)
