# config/packages/nelmio_api_doc.yaml
@@ -318,6 +318,80 @@ nelmio_api_doc:
                             description: Bad request
                         '404':
                             description: Article not found
+            /api/articles/{id}/comments:
+                get:
+                    tags:
+                        - Articles API
+                    description: Show all comments for article
+                    produces:
+                        - application/json
+                    parameters:
+                        - name: id
+                          description: Article ID
+                          in: path
+                          required: true
+                          type: string
+                    responses:
+                        '200':
+                            description: Show all comments for article successful
+                            schema:
+                                type: object
+                                properties:
+                                    comments:
+                                        type: object
+                                        properties:
+                                            id:
+                                                type: string
+                                                example: 1
+                                            comment:
+                                                type: string
+                                                example: Comment 1 for "Title article 1"
+                                            article:
+                                                type: object
+                                                properties:
+                                                    id:
+                                                        type: string
+                                                        example: 1
+                                                    title:
+                                                        type: string
+                                                        example: Title artile 1
+                                                    text:
+                                                        type: string
+                                                        example: Text artile 1
+                                                    imageName:
+                                                        type: string
+                                                        example: article_image.jpg
+                                                    createdAt:
+                                                        type: string
+                                                        example: "2019-01-24T14:22:49+02:00"
+                                                    approved:
+                                                        type: string
+                                                        example: true
+                                                    likes:
+                                                        type: string
+                                                        example: 1
+                                            createdAt:
+                                                 type: string
+                                                 example: "2019-01-24T14:22:51+02:00"
+                                            approved:
+                                                 type: string
+                                                 example: true
+                                            user:
+                                                type: object
+                                                properties:
+                                                    id:
+                                                        type: string
+                                                        example: 1
+                                                    firstName:
+                                                        type: string
+                                                        example: firstName
+                                                    lastName:
+                                                        type: string
+                                                        example: lastName
+                        '400':
+                            description: Bad request
+                        '404':
+                            description: Article not found
             /api/comments/page={page}:
                 get:
                     tags:
